# timer_manager

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
coverage/: lcov.info  tarpaulin-report.html
examples/: basic_usage.rs
src/: lib.rs  mod.rs  tm.rs
